--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 ipykernel<6  # Install old version of ipykernel to avoid terminal issues
-glue-core
-glue-vispy-viewers
-glue-wwt
-glue-plotly
+git+https://github.com/Carifio24/glue.git@glue-in-the-dark
+glue-vispy-viewers==1.0.7
+glue-wwt==0.6.1
+glue-plotly==0.4.0
 pvextractor
 pywwt
 notebook
