--- a/.github/workflows/build_stable.yml
+++ b/.github/workflows/build_stable.yml
@@ -54,7 +54,7 @@ jobs:
 
     - name: Install development version of pyinstaller
       if: ${{ matrix.os == 'macos-11' }}
-      run: PYINSTALLER_COMPILE_BOOTLOADER=1 pip install git+https://github.com/rokm/pyinstaller.git@let-there-be-symlinks-final
+      run: PYINSTALLER_COMPILE_BOOTLOADER=1 pip install git+https://github.com/pyinstaller/pyinstaller.git@develop
 
     - name: Install development version of pyinstaller
       if: ${{ matrix.os != 'macos-11' }}
