Don't upload entire dist folder

--- a/.github/workflows/build_stable.yml
+++ b/.github/workflows/build_stable.yml
@@ -135,4 +135,6 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: glue binaries
-        path: dist/
+        path: |
+        dist/"glue ${GITHUB_REF_NAME}.app"
+          dist/"glue ${GITHUB_REF_NAME}.exe"
