--- a/.github/workflows/build_stable.yml
+++ b/.github/workflows/build_stable.yml
@@ -75,15 +75,6 @@ jobs:
       if: ${{ matrix.os == 'macos-11' }}
       run: dist/glue.app/Contents/MacOS/start_glue --test
 
-    - name: Rename MacOS X application
-      if: ${{ matrix.os == 'macos-11' }}
-      run: mv dist/glue.app dist/"glue ${GITHUB_REF_NAME}.app"
-
-    - name: Rename Windows application
-      if: ${{ matrix.os == 'windows-2019' }}
-      shell: bash
-      run: mv dist/glue.exe dist/"glue ${GITHUB_REF_NAME}.exe"
-
         #    # Build signed DMG for direct distribution
         #
         #    - name: Remove start_glue
@@ -136,5 +127,5 @@ jobs:
       with:
         name: glue binaries
         path: |
-          dist/"glue ${GITHUB_REF_NAME}.app"
-          dist/"glue ${GITHUB_REF_NAME}.exe"
+          dist/glue.app
+          dist/glue.exe
