--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 ipykernel<6  # Install old version of ipykernel to avoid terminal issues
-git+https://github.com/Carifio24/glue.git@glue-in-the-dark
+glue-core
 glue-vispy-viewers==1.0.7
-glue-wwt==0.6.1
+git+https://github.com/Carifio24/glue-wwt.git@wwt-settings
 glue-plotly==0.4.0
 pvextractor
 pywwt
