--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ glue-vispy-viewers==1.0.7
 git+https://github.com/Carifio24/glue-wwt.git@wwt-settings
 glue-plotly==0.4.0
 pvextractor
-pywwt
+git+https://github.com/WorldWideTelescope/pywwt.git
 notebook
 numpy<1.22
 astropy<5.0
