--- a/.github/workflows/build_stable.yml
+++ b/.github/workflows/build_stable.yml
@@ -1,14 +1,6 @@
 name: Build stable and nightly bundles
 
-on:
-  push:
-    branches:
-    - '*'
-    tags:
-    - '*'
-  schedule:
-    - cron: '0 3 * * *'
-  workflow_dispatch:
+on: workflow_dispatch
 
 jobs:
   build_applications:
@@ -138,18 +130,8 @@ jobs:
     - name: Output list of included packages
       if: matrix.os == 'macos-11'
       run: pip freeze > included-packages.txt
-    - name: Install awscli
-      run: pip install awscli
-    - name: Upload glue to S3
-      shell: bash
-      if: github.event_name != 'pull_request'
-      run: aws s3 cp dist/ s3://glueviz/installers/${GITHUB_REF_NAME}/ --recursive
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    - name: Upload package list to S3
-      if: github.event_name != 'pull_request' && matrix.os == 'macos-11'
-      run: aws s3 cp included-packages.txt s3://glueviz/installers/${GITHUB_REF_NAME}/
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    - name: Upload binaries
+      uses: actions/upload-artifact@v3
+      with:
+        name: glue binaries
+        path: dist/
